--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -47,7 +47,7 @@
   "@password": {
     "description": "The current language"
   },
-  "forgotPassword": "Forget Password?",
+  "forgotPassword": "Forgot Password?",
   "@forgotPassword": {
     "description": "The current language"
   },
