Localization + Overflow errors are fixed
Localization + Overflow errors are fixed

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -51,7 +51,115 @@
   "zipCode": "يالبريد الرمز",
   "contactNo":"لالاتصا رقم",
   "selectPaymentMethod":"الدفع طريقة اختار",
-  "thankYouPlacingOrder": "يسعدنا تلقي طلبكم، ونتمنى لكم يوماً سعيدا"
-
+  "thankYouPlacingOrder": "يسعدنا تلقي طلبكم، ونتمنى لكم يوماً سعيدا",
+  "branches":"branches",
+  "cartIsEmpty":"cartIsEmpty",
+  "checkOUT":"checkOUT",
+  "categories":"categories",
+  "haveCouponCode":"haveCouponCode?",
+  "applyCoupon":"applyCoupon",
+  "enterYourCouponCode":"enterYourCouponCode",
+  "apply":"apply",
+  "couponOff":"couponOff",
+  "currency":"currency",
+  "shippingCost":"shippingCost",
+  "totalCost":"totalCost",
+  "pay":"pay",
+  "coupons":"coupons",
+  "off":"off",
+  "available":"available",
+  "notAvailable":"notAvailable",
+  "status":"status",
+  "couponCode":"couponCode",
+  "description":"description",
+  "validTill":"validTill",
+  "inquiryForm":"inquiryForm",
+  "title":"title",
+  "note":"note",
+  "submit":"submit",
+  "resetPassword":"resetPassword",
+  "emailAddressBelowResetPassword":"emailAddressBelowResetPassword",
+  "send":"send",
+  "otpVerification":"otpVerification",
+  "enterInformationBelowToResetPassword":"enterInformationBelowToResetPassword",
+  "otp":"otp",
+  "submit":"submit",
+  "category":"category",
+  "viewAll":"viewAll",
+  "featured":"featured",
+  "hotSale":"hotSale",
+  "viewed":"viewed",
+  "ourCatalog":"ourCatalog",
+  "small":"small",
+  "medium":"medium",
+  "large":"large",
+  "myOrder":"myOrder",
+  "deliveryCharges":"deliveryCharges",
+  "discountAmount":"discountAmount",
+  "grandTotal":"grandTotal",
+  "myOrders":"myOrders",
+  "orderID":"orderID: ",
+  "totalAmount":"totalAmount:",
+  "details":"details",
+  "status":"status",
+  "createdAt":"createdAt ",
+  "otpVerification":"otpVerification",
+  "emailAddressBelowToResetPassword":"emailAddressBelowToResetPassword",
+  "placeOrder":"placeOrder",
+  "address":"address",
+  "contactNumberLikeThat":"contactNumberLikeThat",
+  "paymentMethod":"paymentMethod",
+  "selectBranch":"selectBranch",
+  "note":"note",
+  "proceed":"proceed",
+  "selectCity":"selectCity",
+  "confirm":"confirm",
+  "notNow":"notNow",
+  "bookingTime":"bookingTime",
+  "creditOrDebitCard":"creditOrDebitCard",
+  "cashOnDelivery":"cashOnDelivery",
+  "pickFromBranch":"pickFromBranch",
+  "description":"description",
+  "addToCart":"addToCart",
+  "standard":"standard",
+  "availableSize":"availableSize: ",
+  "availableSizes":"availableSizes",
+  "reviews":"reviews",
+  "viewAll":"viewAll",
+  "addREVIEW":"addREVIEW",
+  "tapAStar":"tapAStar",
+  "comment":"comment",
+  "submit":"submit",
+  "similarProducts":"similarProducts",
+  "profile":"profile",
+  "save":"save",
+  "selectOption":"selectOption",
+  "camera":"camera",
+  "storage":"storage",
+  "searchYourFavouriteItem":"searchYourFavouriteItem",
+  "home":"home",
+  "search":"search",
+  "cart":"cart",
+  "notifications":"notifications",
+  "languages":"languages",
+  "logout":"logout",
+  "termsOfService":"termsOfService",
+  "orderInfo":"orderInfo",
+  "orderDate":"orderDate",
+  "paymentMethod":"paymentMethod",
+  "paymentStatus":"paymentStatus",
+  "note":"note",
+  "orderDetails":"orderDetails",
+  "product":"product",
+  "unitPrice":"unitPrice",
+  "size":"size",
+  "quantity":"quantity",
+  "total":"total",
+  "english": "english",
+  "arabic": "arabic",
+  "login": "login",
+  "cityNotSelected": "cityNotSelected",
+  "change": "change",
+  "createAccount": "createAccount"
 }
 
