Changed select time menu.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -160,6 +160,7 @@
   "login": "login",
   "cityNotSelected": "cityNotSelected",
   "change": "change",
-  "createAccount": "createAccount"
+  "createAccount": "createAccount",
+  "selectTime": "Select Time"
 }
 
