Added in translations for API strings and fixed some bugs.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -161,6 +161,12 @@
   "cityNotSelected": "cityNotSelected",
   "change": "change",
   "createAccount": "createAccount",
-  "selectTime": "Select Time"
+  "selectTime": "Select Time",
+  "unknownError": "unknownError",
+  "noInternet": "noInternet",
+  "cantServeRequest": "cantServeRequest",
+  "cantLogin": "cantLogin",
+  "cantGetProduct": "cantGetProduct",
+  "paymentProcessError": "paymentProcessError"
 }
 
