Added translations and back press snackbar, Fixed product quantity related issue
Added translations and back press snackbar.
Fixed product quantity related issue .

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -2,159 +2,159 @@
   "welcomeToAll": "مرحباً بكم في تطبيقنا الالكتروني الجديد",
   "premiumChocolate": "أفخر المنتجات بتشكيلة واسعة من الاختيارات المنوعة تحصلون عليها بكل سهولة عبر تطبيقنا الجديد",
   "welComeBack": "أهلاً بكم من جديد",
-  "laBoucheeIsArt":"بالنسبة لنا في لابوشيه.. الشكولاته فن راقً.. وعالم لا محدود من الخيارات",
-  "ourGoal":"هدفنا الابتكار في عالم الحلويات.. في الشكل والمضمون",
-  "foundedIn":"لابوشيه من أوائل الشركات المتخصصة في مجالها منذ تأسيسها عام 2012م",
-  "branches":"لدى لابوشيه أكثر من 13 فرع منتشرة في مناطق المملكة لخدمتكم",
+  "laBoucheeIsArt": "بالنسبة لنا في لابوشيه.. الشكولاته فن راقً.. وعالم لا محدود من الخيارات",
+  "ourGoal": "هدفنا الابتكار في عالم الحلويات.. في الشكل والمضمون",
+  "foundedIn": "لابوشيه من أوائل الشركات المتخصصة في مجالها منذ تأسيسها عام 2012م",
+  "branches": "لدى لابوشيه أكثر من 13 فرع منتشرة في مناطق المملكة لخدمتكم",
   "skip": "تخطي",
-  "signIn":"تسجيل دخول",
+  "signIn": "تسجيل دخول",
   "signInWithEmailPassword": "تسجيل الدخول بالبريد الإلكتروني",
-  "email":"البريد الإلكتروني",
-  "password":"كلمة السر",
-  "forgotPassword":"نسيت كلمة السر؟",
-  "dontHaveAccount":"ليس لديك حساب؟",
-  "signUp":"تسجيل جديد",
-  "viewAll":"مشاهدة الكل",
-  "search":"بحث",
-  "notifications":"التنبيهات",
-  "profile":"الملف الشخصي",
-  "myProfile":"ملفي الشخصي",
-  "myOrders":"طلباتي",
-  "featuredProducts":"منتجات مختارة",
-  "proceedToPay":"إتمام عملية الدفع",
-  "submitOrder":"تقديم الطلب",
-  "popularProducts":"الأكثر طلباًًً",
-  "mostViewed":"الأكثر مشاهدة\n",
-  "feature":"\tعروض مميزة\n",
-  "hotSales":"أقوى العروض\n",
-  "ourProducts":"منتجاتنا",
-  "more":"المزيد",
-  "callUs":"بنا اتصل",
-  "sar":"ريال",
-  "quantity":" العدد / الكمية\n",
-  "addToCard":"* السلة إلى أضف",
-  "addReview":"ةمراجع إضافة ",
-  "noRecordFound":"سجلات يوجد لا ",
-  "yourRatings":"تقييمك*",
+  "email": "البريد الإلكتروني",
+  "password": "كلمة السر",
+  "forgotPassword": "نسيت كلمة السر؟",
+  "dontHaveAccount": "ليس لديك حساب؟",
+  "signUp": "تسجيل جديد",
+  "viewAll": "مشاهدة الكل",
+  "search": "بحث",
+  "notifications": "التنبيهات",
+  "profile": "الملف الشخصي",
+  "myProfile": "ملفي الشخصي",
+  "myOrders": "طلباتي",
+  "featuredProducts": "منتجات مختارة",
+  "proceedToPay": "إتمام عملية الدفع",
+  "submitOrder": "تقديم الطلب",
+  "popularProducts": "الأكثر طلباًًً",
+  "mostViewed": "الأكثر مشاهدة\n",
+  "feature": "\tعروض مميزة\n",
+  "hotSales": "أقوى العروض\n",
+  "ourProducts": "منتجاتنا",
+  "more": "المزيد",
+  "callUs": "بنا اتصل",
+  "sar": "ريال",
+  "quantity": " العدد / الكمية\n",
+  "addToCard": "* السلة إلى أضف",
+  "addReview": "ةمراجع إضافة ",
+  "noRecordFound": "سجلات يوجد لا ",
+  "yourRatings": "تقييمك*",
   "yourReview": "مراجعتك*",
   "reviews": "المراجعات",
-  "submit":"إرسال",
-  "relatedProducts":"* الصلة ذات المنتجات",
-  "inquiryForm":"الاستفسار نموذج",
-  "orders":"الطلبات",
-  "discountCoupons":"الخصم قسائم",
-  "address":"العنوان",
-  "selectCity":"مدينة اختر",
-  "register":"تسجيل",
-  "name":"اسم",
-  "emailAddress":"الإلكتروني البريد  عنوان ",
+  "submit": "إرسال",
+  "relatedProducts": "* الصلة ذات المنتجات",
+  "inquiryForm": "الاستفسار نموذج",
+  "orders": "الطلبات",
+  "discountCoupons": "الخصم قسائم",
+  "address": "العنوان",
+  "selectCity": "مدينة اختر",
+  "register": "تسجيل",
+  "name": "اسم",
+  "emailAddress": "الإلكتروني البريد  عنوان ",
   "zipCode": "يالبريد الرمز",
-  "contactNo":"لالاتصا رقم",
-  "selectPaymentMethod":"الدفع طريقة اختار",
+  "contactNo": "لالاتصا رقم",
+  "selectPaymentMethod": "الدفع طريقة اختار",
   "thankYouPlacingOrder": "يسعدنا تلقي طلبكم، ونتمنى لكم يوماً سعيدا",
-  "branches":"branches",
-  "cartIsEmpty":"cartIsEmpty",
-  "checkOUT":"checkOUT",
-  "categories":"categories",
-  "haveCouponCode":"haveCouponCode?",
-  "applyCoupon":"applyCoupon",
-  "enterYourCouponCode":"enterYourCouponCode",
-  "apply":"apply",
-  "couponOff":"couponOff",
-  "currency":"currency",
-  "shippingCost":"shippingCost",
-  "totalCost":"totalCost",
-  "pay":"pay",
-  "coupons":"coupons",
-  "off":"off",
-  "available":"available",
-  "notAvailable":"notAvailable",
-  "status":"status",
-  "couponCode":"couponCode",
-  "description":"description",
-  "validTill":"validTill",
-  "inquiryForm":"inquiryForm",
-  "title":"title",
-  "note":"note",
-  "submit":"submit",
-  "resetPassword":"resetPassword",
-  "emailAddressBelowResetPassword":"emailAddressBelowResetPassword",
-  "send":"send",
-  "otpVerification":"otpVerification",
-  "enterInformationBelowToResetPassword":"enterInformationBelowToResetPassword",
-  "otp":"otp",
-  "submit":"submit",
-  "category":"category",
-  "viewAll":"viewAll",
-  "featured":"featured",
-  "hotSale":"hotSale",
-  "viewed":"viewed",
-  "ourCatalog":"ourCatalog",
-  "small":"small",
-  "medium":"medium",
-  "large":"large",
-  "myOrder":"myOrder",
-  "deliveryCharges":"deliveryCharges",
-  "discountAmount":"discountAmount",
-  "grandTotal":"grandTotal",
-  "myOrders":"myOrders",
-  "orderID":"orderID: ",
-  "totalAmount":"totalAmount:",
-  "details":"details",
-  "status":"status",
-  "createdAt":"createdAt ",
-  "otpVerification":"otpVerification",
-  "emailAddressBelowToResetPassword":"emailAddressBelowToResetPassword",
-  "placeOrder":"placeOrder",
-  "address":"address",
-  "contactNumberLikeThat":"contactNumberLikeThat",
-  "paymentMethod":"paymentMethod",
-  "selectBranch":"selectBranch",
-  "note":"note",
-  "proceed":"proceed",
-  "selectCity":"selectCity",
-  "confirm":"confirm",
-  "notNow":"notNow",
-  "bookingTime":"bookingTime",
-  "creditOrDebitCard":"creditOrDebitCard",
-  "cashOnDelivery":"cashOnDelivery",
-  "pickFromBranch":"pickFromBranch",
-  "description":"description",
-  "addToCart":"addToCart",
-  "standard":"standard",
-  "availableSize":"availableSize: ",
-  "availableSizes":"availableSizes",
-  "reviews":"reviews",
-  "viewAll":"viewAll",
-  "addREVIEW":"addREVIEW",
-  "tapAStar":"tapAStar",
-  "comment":"comment",
-  "submit":"submit",
-  "similarProducts":"similarProducts",
-  "profile":"profile",
-  "save":"save",
-  "selectOption":"selectOption",
-  "camera":"camera",
-  "storage":"storage",
-  "searchYourFavouriteItem":"searchYourFavouriteItem",
-  "home":"home",
-  "search":"search",
-  "cart":"cart",
-  "notifications":"notifications",
-  "languages":"languages",
-  "logout":"logout",
-  "termsOfService":"termsOfService",
-  "orderInfo":"orderInfo",
-  "orderDate":"orderDate",
-  "paymentMethod":"paymentMethod",
-  "paymentStatus":"paymentStatus",
-  "note":"note",
-  "orderDetails":"orderDetails",
-  "product":"product",
-  "unitPrice":"unitPrice",
-  "size":"size",
-  "quantity":"quantity",
-  "total":"total",
+  "branches": "branches",
+  "cartIsEmpty": "cartIsEmpty",
+  "checkOUT": "checkOUT",
+  "categories": "categories",
+  "haveCouponCode": "haveCouponCode?",
+  "applyCoupon": "applyCoupon",
+  "enterYourCouponCode": "enterYourCouponCode",
+  "apply": "apply",
+  "couponOff": "couponOff",
+  "currency": "currency",
+  "shippingCost": "shippingCost",
+  "totalCost": "totalCost",
+  "pay": "pay",
+  "coupons": "coupons",
+  "off": "off",
+  "available": "available",
+  "notAvailable": "notAvailable",
+  "status": "status",
+  "couponCode": "couponCode",
+  "description": "description",
+  "validTill": "validTill",
+  "inquiryForm": "inquiryForm",
+  "title": "title",
+  "note": "note",
+  "submit": "submit",
+  "resetPassword": "resetPassword",
+  "emailAddressBelowResetPassword": "emailAddressBelowResetPassword",
+  "send": "send",
+  "otpVerification": "otpVerification",
+  "enterInformationBelowToResetPassword": "enterInformationBelowToResetPassword",
+  "otp": "otp",
+  "submit": "submit",
+  "category": "category",
+  "viewAll": "viewAll",
+  "featured": "featured",
+  "hotSale": "hotSale",
+  "viewed": "viewed",
+  "ourCatalog": "ourCatalog",
+  "small": "small",
+  "medium": "medium",
+  "large": "large",
+  "myOrder": "myOrder",
+  "deliveryCharges": "deliveryCharges",
+  "discountAmount": "discountAmount",
+  "grandTotal": "grandTotal",
+  "myOrders": "myOrders",
+  "orderID": "orderID: ",
+  "totalAmount": "totalAmount:",
+  "details": "details",
+  "status": "status",
+  "createdAt": "createdAt ",
+  "otpVerification": "otpVerification",
+  "emailAddressBelowToResetPassword": "emailAddressBelowToResetPassword",
+  "placeOrder": "placeOrder",
+  "address": "address",
+  "contactNumberLikeThat": "contactNumberLikeThat",
+  "paymentMethod": "paymentMethod",
+  "selectBranch": "selectBranch",
+  "note": "note",
+  "proceed": "proceed",
+  "selectCity": "selectCity",
+  "confirm": "confirm",
+  "notNow": "notNow",
+  "bookingTime": "bookingTime",
+  "creditOrDebitCard": "creditOrDebitCard",
+  "cashOnDelivery": "cashOnDelivery",
+  "pickFromBranch": "pickFromBranch",
+  "description": "description",
+  "addToCart": "addToCart",
+  "standard": "standard",
+  "availableSize": "availableSize: ",
+  "availableSizes": "availableSizes",
+  "reviews": "reviews",
+  "viewAll": "viewAll",
+  "addREVIEW": "addREVIEW",
+  "tapAStar": "tapAStar",
+  "comment": "comment",
+  "submit": "submit",
+  "similarProducts": "similarProducts",
+  "profile": "profile",
+  "save": "save",
+  "selectOption": "selectOption",
+  "camera": "camera",
+  "storage": "storage",
+  "searchYourFavouriteItem": "searchYourFavouriteItem",
+  "home": "home",
+  "search": "search",
+  "cart": "cart",
+  "notifications": "notifications",
+  "languages": "languages",
+  "logout": "logout",
+  "termsOfService": "termsOfService",
+  "orderInfo": "orderInfo",
+  "orderDate": "orderDate",
+  "paymentMethod": "paymentMethod",
+  "paymentStatus": "paymentStatus",
+  "note": "note",
+  "orderDetails": "orderDetails",
+  "product": "product",
+  "unitPrice": "unitPrice",
+  "size": "size",
+  "quantity": "quantity",
+  "total": "total",
   "english": "english",
   "arabic": "arabic",
   "login": "login",
@@ -167,6 +167,15 @@
   "cantServeRequest": "cantServeRequest",
   "cantLogin": "cantLogin",
   "cantGetProduct": "cantGetProduct",
-  "paymentProcessError": "paymentProcessError"
+  "paymentProcessError": "paymentProcessError",
+  "emailEmpty":"Email should not be empty",
+  "invalidEmail": "INVALID EMAIL",
+  "passwordEmpty": "PASSWORD SHOULD NOT BE EMPTY",
+  "invalidPassword": "INVALID PASSWORD",
+  "contactEmpty": "CONTACT NUMBER EMPTY",
+  "addressEmpty": "ADDRESS SHOULD NOT BE EMPTY",
+  "nameEmpty": "NAME SHOULD NOT BE EMPTY",
+  "bookingDate": "Booking Date",
+  "bookingTime": "Booking Time"
 }
 
