Fixed the order_date,booking_date_booking_time and city issue.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -176,6 +176,7 @@
   "addressEmpty": "ADDRESS SHOULD NOT BE EMPTY",
   "nameEmpty": "NAME SHOULD NOT BE EMPTY",
   "bookingDate": "Booking Date",
-  "bookingTime": "Booking Time"
+  "bookingTime": "Booking Time",
+  "city": "city"
 }
 
