--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -714,7 +714,8 @@
   "bookingTime": "Booking Time",
   "@bookingTime": {
     "description": "The current language"
-  }
+  },
+  "city": "City"
 }
 
 
